English grammar improvement

--- a/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
+++ b/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
@@ -15,7 +15,7 @@ import "../../__stories__/general-hooks-stories.scss";
 
 ## Overview
 
-This hook is used when you want to capture click events outside of your component.
+This hook is used when you want to capture click events outside your component.
 
 <Canvas>
   <Story name="Overview">
