Add popper.js dev tip, move technical patterns dev tip below the story

--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -111,6 +111,14 @@ Please be aware that the dialog component is not responsible for the appearance 
 
 <ArgsTable story="Overview" />
 
+<Tip title="Dev tip">
+  You can use the
+  <Link size={Link.sizes.SMALL} href="https://popper.js.org/docs/v2/modifiers/">
+    Popper.js modifiers
+  </Link>
+  for extended Dialog customization.
+</Tip>
+
 ## Usage
 
 <UsageGuidelines
@@ -536,7 +544,7 @@ Manage the open and close state of the dialog. Note that `isOpen` is used and `s
 
 ### Dialog with tooltip
 
-Dialog has a <code>tooltip</code> prop which adds an arrow pointing toward the center of the reference.<Link href="https://popper.js.org/docs/v2/modifiers/arrow/">Read more</Link>
+Dialog has a <code>tooltip</code> prop which adds an arrow pointing toward the center of the reference element.
 
 <Canvas>
   <Story name="Dialog with tooltip">
@@ -573,17 +581,6 @@ Dialog has a <code>tooltip</code> prop which adds an arrow pointing toward the c
     }}
   </Story>
 </Canvas>
-
-<Tip title="Dev tip">
-  If you wish to implement a dropdown inside a Dialog container and need help displaying the dropdown's popovers
-  correctly, read more about our dropdown in popovers technical pattern
-  <Link
-    href="/?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
-    size={Link.sizes.SMALL}
-  >
-    here
-  </Link>.
-</Tip>
 
 ### Dialog prevent container scroll
 
@@ -622,6 +619,19 @@ Prevent containerSelector scroll when dialog open
     }}
   </Story>
 </Canvas>
+
+<Tip title="Dev tip">
+  If you wish to implement a Dropdown inside a Dialog container and need help displaying the Dropdown's popovers
+  correctly, read more about our Dropdown in popovers technical pattern{" "}
+  <Link
+    href="/?path=/docs/technical-patterns-dropdowns-inside-pop-overs--modal-with-damaged-dropdown"
+    size={Link.sizes.SMALL}
+    withoutSpacing
+  >
+    here
+  </Link>
+  .
+</Tip>
 
 ## Related components
 
