docs: sidebar tags POC

--- a/src/components/Button/__stories__/button.stories.mdx
+++ b/src/components/Button/__stories__/button.stories.mdx
@@ -44,7 +44,7 @@ For example, you can use a button for allowing the functionality of submitting a
 or performing a delete operation.
 
 <Canvas>
-  <Story name="Overview" args={{ children: "Button" }}>
+  <Story name="Overview" args={{ children: "Button" }} parameters={{ status: "Beta" }}>
     {buttonTemplate.bind({})}
   </Story>
 </Canvas>
