--- a/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
+++ b/src/components/LegacyHeading/__stories__/LegacyHeading.stories.mdx
@@ -22,7 +22,7 @@ export const metaSettings = createStoryMetaSettingsDecorator({
 });
 
 <Meta
-  title="Text/LegacyHeading"
+  title="Text/LegacyHeading [deprecated]"
   component={Heading}
   argTypes={metaSettings.argTypes}
   decorators={metaSettings.decorators}
@@ -83,7 +83,7 @@ Heading components are used to title any page sections or sub-sections in top-le
 ### Sizes
 
 <Canvas>
-  <Story name="Sizes">
+  <Story name="Sizes [deprecated]">
     <div style={{ display: "flex", flexDirection: "column" }}>
       <Heading type={Heading.types.h1} value="Hello H1" />
       <Heading type={Heading.types.h1} value="Hello H1 medium" size="medium" />
