Improve overview example - hover colors

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -51,19 +51,19 @@ Product theme is a custom theme that can be provided by a user, there you can sp
         colors: {
           [SystemTheme.LIGHT]: {
             [Color.primaryColor]: "green",
-            [Color.primaryHoverColor]: "green"
+            [Color.primaryHoverColor]: "darkgreen"
           },
           [SystemTheme.DARK]: {
             [Color.primaryColor]: "red",
-            [Color.primaryHoverColor]: "red"
+            [Color.primaryHoverColor]: "darkred"
           },
           black: {
             "primary-color": "orange",
-            "primary-hover-color": "orange"
+            "primary-hover-color": "darkorange"
           },
           hacker: {
-            "primary-color": "yellow",
-            "primary-hover-color": "yellow"
+            "primary-color": "purple",
+            "primary-hover-color": "darkmagenta"
           }
         }
       }
