--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -79,7 +79,13 @@ Product theme is a custom theme that can be provided by a user, there you can sp
 
 ## Usage
 
-<UsageGuidelines guidelines={["Usage guideline 1", "Usage guideline 2", "Usage guideline 3"]} />
+<UsageGuidelines
+  guidelines={[
+    "In most common case should only be used once to wrap whole application on a root level",
+    "Usage guideline 2",
+    "Usage guideline 3"
+  ]}
+/>
 
 <Tip title="Not what you were looking for?">Tip content</Tip>
 
