docs: variants description

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -95,6 +95,8 @@ Product theme is a custom theme that can be provided by a user, there you can sp
 
 ## Variants
 
+There are four system themes <code>light</code>, <code>dark</code>, <code>black</code> and <code>hacker</code> and in each you can redefine the values of the following color tokens:
+
 ### Colors eligible for theming
 
 <Story name="Colors eligible for theming">
