docs(MenuItem): add description to stories

--- a/src/components/Menu/MenuItem/__stories__/MenuItem.stories.mdx
+++ b/src/components/Menu/MenuItem/__stories__/MenuItem.stories.mdx
@@ -97,11 +97,11 @@ Use menu item for drawing one options that displayed inside a menu.
     {
       positive: {
         component: menuItemWithLabelDoTemplate(),
-        description: ""
+        description: "Keep the label text in the menu item short and informative. Use 1 word only."
       },
       negative: {
         component: menuItemWithLabelDontTemplate(),
-        description: ""
+        description: "Dont use long text with more than 1 word, to ensure clarity and to avoid ellipsis."
       }
     }
   ]}
