--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -89,8 +89,12 @@ Product theme is a custom theme that can be provided by a user, there you can sp
       <code>body</code> and render everything else inside it
     </>,
     <>
-      In most common case <code>ThemeProvider</code> should be rendered only once on the root level of the application -
-      below the <code>body</code>
+      In most common case ThemeProvider should be rendered only once on the root level of the application - below the{" "}
+      <code>body</code>
+    </>,
+    <>
+      ThemeProvider is populating theme name <code>className</code> to it's child, so don't put{" "}
+      <code>{"\<Fragment\>"}</code> (<code>{"\<\>"}</code>) inside - it's not accepting <code>className</code> prop
     </>
   ]}
 />
