Improve text description

--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -159,7 +159,7 @@ If you need to apply some of the tokens overrides only on elements under specifi
       },
       negative: {
         component: [<ThemeProviderNegativeExampleTemplate />],
-        description: "Don’t override only specific tokens to avoid inconsistent behaviour"
+        description: "Don’t override only specific tokens to avoid inconsistent appearance"
       }
     }
   ]}
