--- a/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
+++ b/src/components/ThemeProvider/__stories__/ThemeProvider.stories.mdx
@@ -57,16 +57,16 @@ Product theme is a custom theme that can be provided by a user, there you can sp
             [ThemeColor.primaryHoverColor]: "darkgreen"
           },
           [SystemTheme.DARK]: {
-            [ThemeColor.primaryColor]: "red",
-            [ThemeColor.primaryHoverColor]: "darkred"
+            [ThemeColor.primaryColor]: "salmon",
+            [ThemeColor.primaryHoverColor]: "darksalmon"
           },
           black: {
-            "primary-color": "orange",
-            "primary-hover-color": "darkorange"
+            [ThemeColor.primaryColor]: "slateblue",
+            [ThemeColor.primaryHoverColor]: "darkslateblue"
           },
           hacker: {
-            "primary-color": "purple",
-            "primary-hover-color": "darkmagenta"
+            [ThemeColor.primaryColor]: "purple",
+            [ThemeColor.primaryHoverColor]: "darkmagenta"
           }
         }
       }
