Replace spacing tokens with sb tokens

--- a/src/components/Button/__stories__/button.stories.mdx
+++ b/src/components/Button/__stories__/button.stories.mdx
@@ -230,7 +230,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
 <Canvas columns={3}>
   <Story name="On color states">
     <div style={{ display: "flex", flexDirection: "column" }}>
-      <span style={{ marginBottom: "var(--spacing-small)" }}>Regular</span>
+      <span style={{ marginBottom: "var(--sb-spacing-small)" }}>Regular</span>
       <div className="monday-storybook-button_on-color-button">
         <Button color={Button.colors.ON_PRIMARY_COLOR} marginRight>
           Primary on color
@@ -243,7 +243,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
         </Button>
       </div>
       <br />
-      <span style={{ marginBottom: "var(--spacing-small)" }}>Disabled</span>
+      <span style={{ marginBottom: "var(--sb-spacing-small)" }}>Disabled</span>
       <div className="monday-storybook-button_on-color-button">
         <Button color={Button.colors.ON_PRIMARY_COLOR} disabled marginRight>
           Primary on color
