--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -169,7 +169,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           background: "var(--primary-selected-color)",
           width: "124px",
           height: "64px",
-          margin: "var(--spacing-small)",
+          margin: "var(--sb-spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
@@ -182,7 +182,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           background: "var(--positive-color-selected)",
           width: "124px",
           height: "64px",
-          margin: "var(--spacing-small)",
+          margin: "var(--sb-spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
@@ -195,7 +195,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           background: "var(--negative-color-selected)",
           width: "124px",
           height: "64px",
-          margin: "var(--spacing-small)",
+          margin: "var(--sb-spacing-small)",
           borderRadius: "var(--border-radius-small)"
         }}
       >
