Replace border-radius tokens with sb tokens

--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -170,7 +170,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           width: "124px",
           height: "64px",
           margin: "var(--sb-spacing-small)",
-          borderRadius: "var(--border-radius-small)"
+          borderRadius: "var(--sb-border-radius-small)"
         }}
       >
         <Chips label="On selected" showBorder readOnly/>
@@ -183,7 +183,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           width: "124px",
           height: "64px",
           margin: "var(--sb-spacing-small)",
-          borderRadius: "var(--border-radius-small)"
+          borderRadius: "var(--sb-border-radius-small)"
         }}
       >
         <Chips label="On positive" showBorder color={Chips.colors.POSITIVE} readOnly />
@@ -196,7 +196,7 @@ When a chip appears on a background color identical to its color, use `showBorde
           width: "124px",
           height: "64px",
           margin: "var(--sb-spacing-small)",
-          borderRadius: "var(--border-radius-small)"
+          borderRadius: "var(--sb-border-radius-small)"
         }}
       >
         <Chips label="On negative" showBorder color={Chips.colors.NEGATIVE} readOnly />
