Loader.stories.mdx - replace color with hard-coded value

--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -149,7 +149,7 @@ If there is a need for color customization, css `color` attribute of a parent co
 
 <Canvas>
   <Story name="Custom colors">
-    <div style={{ color: "var(--color-dark-red)" }}>
+    <div style={{ color: "#bb3354" }}>
       <Loader size={Loader.sizes.MEDIUM} />
     </div>
   </Story>
