Replace color tokens in story files

--- a/src/components/Icon/__stories__/Icon.stories.mdx
+++ b/src/components/Icon/__stories__/Icon.stories.mdx
@@ -93,7 +93,7 @@ As a default the icon will inherit the color of it's parent container
 
 <Canvas>
   <Story name="Color">
-    <div style={{ color: "var(--color-lipstick)" }}>
+    <div style={{ color: "var(--sb-color-sofia_pink)" }}>
       <Icon iconType={Icon.type.SVG} icon={Bolt} iconLabel="my bolt svg icon" iconSize={16} />
     </div>
   </Story>
