Replace Rubik with Noto Sans Hebrew

--- a/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
@@ -42,8 +42,8 @@ We don't import the font within our CSS in order to give full control of the fon
 More ever this is how we are building our css variable for our main font families
 
 ```css
---font-family: Figtree, Roboto, Rubik, Noto Kufi Arabic, Noto Sans JP, sans-serif;
---title-font-family: Poppins, Roboto, Rubik, Noto Kufi Arabic, Noto Sans JP, sans-serif;
+--font-family: Figtree, Roboto, Noto Sans Hebrew, Noto Kufi Arabic, Noto Sans JP, sans-serif;
+--title-font-family: Poppins, Roboto, Noto Sans Hebrew, Noto Kufi Arabic, Noto Sans JP, sans-serif;
 ```
 
 ## Text styles
