Fixed withoutSpacing links

--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -132,14 +132,10 @@ Please be aware that the dialog component is not responsible for the appearance 
     "Dialog can appear from top, bottom, left and right to an element",
     "Usually, the dialog will be positioned next to the triggered element.",
     <>
-      The Dialog component is mainly used to create customized menus that cannot be developed using our{" "}
-      <Link href="/?path=/docs/navigation-menu-menu--overview" withoutSpacing>
-        Menu
-      </Link>{" "}
-      and{" "}
-      <Link href="?path=/docs/buttons-menubutton--overview" withoutSpacing>
-        MenuButton
-      </Link>{" "}
+      The Dialog component is mainly used to create customized menus that cannot be developed using our
+      <Link href="/?path=/docs/navigation-menu-menu--overview">Menu</Link>
+      and
+      <Link href="?path=/docs/buttons-menubutton--overview">MenuButton</Link>
       components.
     </>
   ]}
