docs: Add spaces between tips and links

--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -98,14 +98,14 @@ Combo box allowing users to filter longer lists to only the selections matching 
   <Link href="/?path=/docs/inputs-radio-button--overview" size={Link.sizes.SMALL} withoutSpacing>
     Radio buttons
   </Link>
-  (if only one item can be selected) or <Link
+  {" "}(if only one item can be selected) or <Link
     href="/?path=/docs/inputs-checkbox--overview"
     size={Link.sizes.SMALL}
     withoutSpacing
   >
     Checkboxes
   </Link>
-  (if multiple items can be selected).
+  {" "}(if multiple items can be selected).
 </Tip>
 
 ## Variants
