docs: replace legacy links with the new ones

--- a/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
+++ b/src/hooks/useClickOutside/__stories__/useClickOutside.stories.mdx
@@ -47,7 +47,7 @@ This hook is used when you want to capture click events outside your component.
       description={
         <>
           A React
-          <Link href="https://reactjs.org/docs/hooks-reference.html#useref">
+          <Link href="https://react.dev/reference/react/useRef">
             ref
           </Link>
           object.
