--- a/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
+++ b/src/hooks/useClickableProps/__stories__/useClickableProps.stories.mdx
@@ -173,7 +173,7 @@ Return props for making an element or component clickable by mouse and keyboard 
     description={
       <>
         A React
-        <Link size={Link.sizes.SMALL} href="https://reactjs.org/docs/hooks-reference.html#useref">
+        <Link size={Link.sizes.SMALL} href="https://react.dev/reference/react/useRef">
           ref
         </Link>
         object for the clickable element.
