--- a/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
+++ b/src/hooks/useGridKeyboardNavigation/__stories__/useGridKeyboardNavigation.stories.mdx
@@ -95,7 +95,7 @@ export const ON_CLICK = action("item selected");
       description={
         <>
           A React{" "}
-          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+          <a href="https://react.dev/reference/react/useRef" target="_blank" rel="noopener noreferrer">
             ref
           </a>{" "}
           object. The reference for the component that listens to keyboard. <br />
