--- a/src/hooks/useHover/__stories__/useHover.stories.mdx
+++ b/src/hooks/useHover/__stories__/useHover.stories.mdx
@@ -52,7 +52,7 @@ Detect whether the mouse is hovering an element by returning its <code>isHovered
     description={
       <>
         A React
-        <Link size={Link.sizes.MEDIUM} href="https://reactjs.org/docs/hooks-reference.html#useref">
+        <Link size={Link.sizes.MEDIUM} href="https://react.dev/reference/react/useRef">
           ref
         </Link>
         object to assign to the element which hover state needs to be tracked.
