--- a/src/hooks/useIsOverflowing/__stories__/useIsOverflowing.stories.mdx
+++ b/src/hooks/useIsOverflowing/__stories__/useIsOverflowing.stories.mdx
@@ -68,7 +68,7 @@ Use this hook, when there is a chance that content won't fit into the container,
     description={
       <>
         A React
-        <Link size={Link.sizes.MEDIUM} href="https://reactjs.org/docs/hooks-reference.html#useref">
+        <Link size={Link.sizes.MEDIUM} href="https://react.dev/reference/react/useRef">
           ref
         </Link>
         object for the container of likely to overflow content.
