--- a/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
+++ b/src/hooks/useListenFocusTriggers/__stories__/useListenFocusTriggers.stories.mdx
@@ -55,7 +55,7 @@ Fire provided callbacks, when focus by mouse or by keyboard happens.
       description={
         <>
           A React
-          <Link size={Link.sizes.MEDIUM} href="https://reactjs.org/docs/hooks-reference.html#useref">
+          <Link size={Link.sizes.MEDIUM} href="https://react.dev/reference/react/useRef">
             ref
           </Link>
           object.
