--- a/src/hooks/useEventListener/__stories__/useEventListener.stories.mdx
+++ b/src/hooks/useEventListener/__stories__/useEventListener.stories.mdx
@@ -46,7 +46,7 @@ Attaches a listener to any DOM event on a specific element, firing a provided ca
       description={
         <>
           A React{" "}
-          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+          <a href="https://react.dev/reference/react/useRef" target="_blank" rel="noopener noreferrer">
             ref
           </a>{" "}
           object.
