--- a/src/hooks/useKeyEvent/__stories__/useKeyEvent.stories.mdx
+++ b/src/hooks/useKeyEvent/__stories__/useKeyEvent.stories.mdx
@@ -64,7 +64,7 @@ Attaches a listener to keyboard DOM events on a specific element, firing a provi
       description={
         <>
           A React{" "}
-          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+          <a href="https://react.dev/reference/react/useRef" target="_blank" rel="noopener noreferrer">
             ref
           </a>{" "}
           object.
