--- a/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
+++ b/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
@@ -51,7 +51,7 @@ Hook for controlling focus on specific component e.g. Input.
       description={
         <>
           A React{" "}
-          <a href="https://reactjs.org/docs/hooks-reference.html#useref" target="_blank" rel="noopener noreferrer">
+          <a href="https://react.dev/reference/react/useRef" target="_blank" rel="noopener noreferrer">
             ref
           </a>{" "}
           object.
