fix text in a few places

--- a/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
@@ -23,7 +23,7 @@ import "./typography.scss";
 
 ## Overview
 
-Like in other ui in mondays interface, typography works by principle of accessibility before aesthetics.
+Like in other UI in mondays interface, typography works by principle of accessibility before aesthetics.
 Therefore the text should be readable and help the user understand what’s important by well contrasted size and colors hierarchy.
 
 ## Fonts
